--- a/tracuu.html
+++ b/tracuu.html
@@ -254,6 +254,8 @@
             "quydt@vietinbank.vn": "VIP",
             "tiendh@vietinbank.vn": "VIP",
             "vunx@vietinbank.vn": "VIP",
+            "nh.quang@myvbi.vn": "VIP",
+            "hungla@vietinbank.vn": "VIP",
             "duc.tm@vietinbank.vn": "37",
             "nmtoan@vietinbank.vn": "38",
             "thanhptn@vietinbank.vn": "39",
@@ -286,6 +288,16 @@
             "hant1@vietinbank.vn": "66",
             "anh.tt@vietinbank.vn": "67",
             "hiepnsn@vietinbank.vn": "68",
+            "xuanbtt@myvbi.vn": "69",
+            "dungtt@myvbi.vn": "70",
+            "hoaltq@myvbi.vn": "71",
+            "phantiendung@vietinbank.vn": "72",
+            "vinhtp@cts.vn": "73",
+            "luatld@vietinbankamc.vn": "74",
+            "tuongnq@vietinbankleasing.vn": "75",
+            "diep.pth@vietinbankgold.vn": "76",
+            "ducnh@vietinbankcapital.vn": "77",
+            "maittt@vietinbank.vn": "78",
             "haocv@vietinbank.vn": "79",
             "ngocpl@vietinbank.vn": "80",
             "nhung.vtt@vietinbank.vn": "81",
