--- a/tracuu.html
+++ b/tracuu.html
@@ -35,16 +35,21 @@
             margin-bottom: 30px;
         }
 
-        .header h1 {
+        .header .event-title {
             color: #7c2d12;
-            margin-bottom: 10px;
-            font-size: 2em;
-            font-weight: 600;
+            margin-bottom: 15px;
+            font-size: 1.4em;
+            font-weight: 700;
+            line-height: 1.3;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
-        .header p {
-            color: #a16207;
-            font-size: 1.1em;
+        .header h1 {
+            color: #92400e;
+            margin-bottom: 10px;
+            font-size: 1.5em;
+            font-weight: 600;
         }
 
         .search-section {
@@ -364,6 +369,14 @@
             .container {
                 padding: 20px;
             }
+
+            .header .event-title {
+                font-size: 1.2em;
+            }
+
+            .header h1 {
+                font-size: 1.3em;
+            }
             
             .input-group {
                 flex-direction: column;
@@ -403,6 +416,14 @@
         }
 
         @media (max-width: 480px) {
+            .header .event-title {
+                font-size: 1em;
+            }
+
+            .header h1 {
+                font-size: 1.1em;
+            }
+
             .seat {
                 width: 28px;
                 height: 22px;
@@ -441,14 +462,17 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Tra cứu ghế theo Email</h1>
-            <p>Đại biểu nhập email để tìm thông tin ghế và vị trí trong sơ đồ chỗ ngồi</p>
+            <div class="event-title">
+                ĐẠI HỘI ĐẠI BIỂU ĐẢNG BỘ NHCTVN LẦN THỨ XI,<br>
+                NHIỆM KỲ 2025 - 2030
+            </div>
+            <h1>Chương trình tra cứu chỗ ngồi đại biểu tại Đại hội</h1>
         </div>
 
         <div class="search-section">
             <div class="input-group">
                 <div class="input-container">
-                    <input type="email" id="emailInput" placeholder="Nhập userAD@vietinbank.vn hoặc email công ty con" />
+                    <input type="email" id="emailInput" placeholder="Đại biểu nhập email tại đây..." />
                     <div class="input-actions">
                         <button class="clear-btn" id="clearBtn" onclick="clearEmail()">✕</button>
                         <span class="input-icon">@</span>
