--- a/tracuu.html
+++ b/tracuu.html
@@ -1047,7 +1047,7 @@
                                 errorMsg += `
                                     <div class="email-suggestion">
                                         <div class="email-text">💡 ${email}</div>
-                                        <button class="copy-btn" onclick="copyEmail('${email}')">📋 Copy</button>
+                                        <button class="copy-btn" onclick="copyEmail('${email}')">🔍 Tra cứu</button>
                                     </div>
                                 `;
                             });
