--- a/tracuu.html
+++ b/tracuu.html
@@ -268,7 +268,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 9px;
+            font-size: 11px; /* Tăng từ 9px lên 11px */
             font-weight: bold;
             transition: all 0.3s;
             background: linear-gradient(135deg, #fffbeb 0%, #fef3c7 100%);
@@ -429,7 +429,7 @@
             .seat {
                 width: 32px;
                 height: 25px;
-                font-size: 7px;
+                font-size: 9px; /* Trên mobile vẫn giữ 9px */
             }
 
             .stage {
@@ -482,7 +482,7 @@
             .seat {
                 width: 28px;
                 height: 22px;
-                font-size: 6px;
+                font-size: 8px; /* Trên mobile nhỏ tăng từ 6px lên 8px */
             }
 
             .stage {
