--- a/tracuu.html
+++ b/tracuu.html
@@ -446,7 +446,7 @@
             </div>
             <div class="input-group">
                 <div class="input-container">
-                    <input type="text" id="searchInput" placeholder="Đại biểu nhập số điện thoại hoặc username email tại đây..." />
+                    <input type="text" id="searchInput" placeholder="Đại biểu nhập tại đây..." />
                     <div class="input-actions">
                         <button class="clear-btn" id="clearBtn" onclick="clearInput()">✕</button>
                     </div>
