--- a/tracuu.html
+++ b/tracuu.html
@@ -36,7 +36,7 @@
         }
 
         .header .event-title {
-            color: #7c2d12;
+            color: #ff0000;
             margin-bottom: 15px;
             font-size: 1.4em;
             font-weight: 700;
