--- a/tracuu.html
+++ b/tracuu.html
@@ -46,7 +46,7 @@
         }
 
         .header h1 {
-            color: #92400e;
+            color: #ff0000;
             margin-bottom: 10px;
             font-size: 1.5em;
             font-weight: 600;
