--- a/tracuu.html
+++ b/tracuu.html
@@ -36,7 +36,7 @@
         }
 
         .header .event-title {
-            color: #ff0000;
+            color: #d12525;
             margin-bottom: 15px;
             font-size: 1.4em;
             font-weight: 700;
@@ -46,7 +46,7 @@
         }
 
         .header h1 {
-            color: #ff0000;
+            color: #d12525;
             margin-bottom: 10px;
             font-size: 1.5em;
             font-weight: 600;
