--- a/tracuu.html
+++ b/tracuu.html
@@ -551,6 +551,7 @@
         
         function initializeDelegateData() {
             const realDelegates = [
+               
   {
     "id": 1,
     "username": "binhtm",
@@ -637,30 +638,57 @@
     "username": "giangnq",
     "phone": "0913297191",
     "fullName": "Nguyễn Quốc Giang",
-    "seatNumber": "B1",
+    "seatNumber": "B24",
     "row": "B",
-    "position": 1
+    "position": 24
   },
   {
     "id": 11,
     "username": "hoaiptt",
     "phone": "0912323239",
     "fullName": "Phạm Thị Thanh Hoài",
-    "seatNumber": "B2",
+    "seatNumber": "B22",
     "row": "B",
-    "position": 2
+    "position": 22
   },
   {
     "id": 12,
     "username": "lethanhtung",
     "phone": "0904107810",
     "fullName": "Lê Thanh Tùng",
-    "seatNumber": "B3",
+    "seatNumber": "B21",
     "row": "B",
-    "position": 3
+    "position": 21
   },
   {
     "id": 13,
+    "username": "nh.quang",
+    "phone": "0912000656",
+    "fullName": "Nguyễn Huy Quang",
+    "seatNumber": "C10",
+    "row": "C",
+    "position": 10
+  },
+  {
+    "id": 14,
+    "username": "vyvt",
+    "phone": "0913580004",
+    "fullName": "Vũ Trung Vỹ",
+    "seatNumber": "C11",
+    "row": "C",
+    "position": 11
+  },
+  {
+    "id": 15,
+    "username": "vunx",
+    "phone": "0913937136",
+    "fullName": "Nguyễn Xuân Vũ",
+    "seatNumber": "C12",
+    "row": "C",
+    "position": 12
+  },
+  {
+    "id": 16,
     "username": "hala",
     "phone": "0904021866",
     "fullName": "Lê Anh Hà",
@@ -669,43 +697,7 @@
     "position": 13
   },
   {
-    "id": 14,
-    "username": "hoaln",
-    "phone": "0913312827",
-    "fullName": "Lê Như Hoa",
-    "seatNumber": "C17",
-    "row": "C",
-    "position": 17
-  },
-  {
-    "id": 15,
-    "username": "nguyenducthanh",
-    "phone": "0913201274",
-    "fullName": "Nguyễn Đức Thành",
-    "seatNumber": "C15",
-    "row": "C",
-    "position": 15
-  },
-  {
-    "id": 16,
-    "username": "vannbt",
-    "phone": "0913153027",
-    "fullName": "Nguyễn Bảo Thanh Vân",
-    "seatNumber": "C18",
-    "row": "C",
-    "position": 18
-  },
-  {
     "id": 17,
-    "username": "lantcq",
-    "phone": "0982512513",
-    "fullName": "Trần Công Quỳnh Lân",
-    "seatNumber": "C16",
-    "row": "C",
-    "position": 16
-  },
-  {
-    "id": 18,
     "username": "hung.nh",
     "phone": "0904252732",
     "fullName": "Nguyễn Hải Hưng",
@@ -714,31 +706,40 @@
     "position": 14
   },
   {
-    "id": 19,
-    "username": "thaolt2",
-    "phone": "0913366353",
-    "fullName": "Lý Thanh Thảo",
-    "seatNumber": "C24",
+    "id": 18,
+    "username": "hoaln",
+    "phone": "0913312827",
+    "fullName": "Lê Như Hoa",
+    "seatNumber": "C15",
     "row": "C",
-    "position": 24
+    "position": 15
+  },
+  {
+    "id": 19,
+    "username": "nguyenducthanh",
+    "phone": "0913201274",
+    "fullName": "Nguyễn Đức Thành",
+    "seatNumber": "C16",
+    "row": "C",
+    "position": 16
   },
   {
     "id": 20,
-    "username": "phuonglt106",
-    "phone": "0988532555",
-    "fullName": "Lê Thị Phượng",
-    "seatNumber": "C23",
+    "username": "vannbt",
+    "phone": "0913153027",
+    "fullName": "Nguyễn Bảo Thanh Vân",
+    "seatNumber": "C17",
     "row": "C",
-    "position": 23
+    "position": 17
   },
   {
     "id": 21,
-    "username": "huongdtk",
-    "phone": "0984339558",
-    "fullName": "Đoàn Thị Kiều Hương",
-    "seatNumber": "C22",
+    "username": "lantcq",
+    "phone": "0982512513",
+    "fullName": "Trần Công Quỳnh Lân",
+    "seatNumber": "C18",
     "row": "C",
-    "position": 22
+    "position": 18
   },
   {
     "id": 22,
@@ -751,30 +752,30 @@
   },
   {
     "id": 23,
-    "username": "nttung",
-    "phone": "0989899268",
-    "fullName": "Nguyễn Thanh Tùng",
-    "seatNumber": "C8",
+    "username": "huongdtk",
+    "phone": "0984339558",
+    "fullName": "Đoàn Thị Kiều Hương",
+    "seatNumber": "C22",
     "row": "C",
-    "position": 8
+    "position": 22
   },
   {
     "id": 24,
-    "username": "duclv",
-    "phone": "0967596666",
-    "fullName": "Lê Việt Đức",
-    "seatNumber": "C7",
+    "username": "phuonglt106",
+    "phone": "0988532555",
+    "fullName": "Lê Thị Phượng",
+    "seatNumber": "C23",
     "row": "C",
-    "position": 7
+    "position": 23
   },
   {
     "id": 25,
-    "username": "ng.a.tuan",
-    "phone": "0903421636",
-    "fullName": "Nguyễn Anh Tuấn",
-    "seatNumber": "C9",
+    "username": "thaolt2",
+    "phone": "0913366353",
+    "fullName": "Lý Thanh Thảo",
+    "seatNumber": "C24",
     "row": "C",
-    "position": 9
+    "position": 24
   },
   {
     "id": 26,
@@ -796,12 +797,12 @@
   },
   {
     "id": 28,
-    "username": "nh.quang",
-    "phone": "0912000656",
-    "fullName": "Nguyễn Huy Quang",
-    "seatNumber": "C10",
+    "username": "duclv",
+    "phone": "0967596666",
+    "fullName": "Lê Việt Đức",
+    "seatNumber": "C7",
     "row": "C",
-    "position": 10
+    "position": 7
   },
   {
     "id": 29,
@@ -823,12 +824,12 @@
   },
   {
     "id": 31,
-    "username": "vyvt",
-    "phone": "0913580004",
-    "fullName": "Vũ Trung Vỹ",
-    "seatNumber": "C11",
+    "username": "nttung",
+    "phone": "0989899268",
+    "fullName": "Nguyễn Thanh Tùng",
+    "seatNumber": "C8",
     "row": "C",
-    "position": 11
+    "position": 8
   },
   {
     "id": 32,
@@ -859,12 +860,12 @@
   },
   {
     "id": 35,
-    "username": "vunx",
-    "phone": "0913937136",
-    "fullName": "Nguyễn Xuân Vũ",
-    "seatNumber": "C12",
+    "username": "ng.a.tuan",
+    "phone": "0903421636",
+    "fullName": "Nguyễn Anh Tuấn",
+    "seatNumber": "C9",
     "row": "C",
-    "position": 12
+    "position": 9
   },
   {
     "id": 36,
@@ -1177,26 +1178,26 @@
     "username": "xuanbtt",
     "phone": "0968221177",
     "fullName": "Bùi Thị Thanh Xuân",
-    "seatNumber": "D3",
+    "seatNumber": "D2",
     "row": "D",
-    "position": 3
+    "position": 2
   },
   {
     "id": 71,
     "username": "dungtt",
     "phone": "0932728666",
     "fullName": "Trần Tiến Dũng",
-    "seatNumber": "D2",
+    "seatNumber": "D1",
     "row": "D",
-    "position": 2
+    "position": 1
   },
   {
     "id": 72,
     "username": "hoaltq",
     "phone": "0989322455",
     "fullName": "Lê Thị Quỳnh Hoa",
-    "seatNumber": "D1",
-    "row": "D",
+    "seatNumber": "E1",
+    "row": "E",
     "position": 1
   },
   {
@@ -1204,8 +1205,8 @@
     "username": "phantiendung",
     "phone": "0906178688",
     "fullName": "Phan Tiến Dũng",
-    "seatNumber": "E1",
-    "row": "E",
+    "seatNumber": "F1",
+    "row": "F",
     "position": 1
   },
   {
@@ -1213,17 +1214,17 @@
     "username": "vinhtp",
     "phone": "0936890619",
     "fullName": "Trần Phúc Vinh",
-    "seatNumber": "D4",
-    "row": "D",
-    "position": 4
+    "seatNumber": "F5",
+    "row": "F",
+    "position": 5
   },
   {
     "id": 75,
     "username": "luatld",
     "phone": "0913366722",
     "fullName": "Lê Đình Luật",
-    "seatNumber": "C4",
-    "row": "C",
+    "seatNumber": "F4",
+    "row": "F",
     "position": 4
   },
   {
@@ -1231,35 +1232,35 @@
     "username": "tuongnq",
     "phone": "0983020898",
     "fullName": "Ngô Quốc Tưởng",
-    "seatNumber": "C2",
-    "row": "C",
-    "position": 2
+    "seatNumber": "D3",
+    "row": "D",
+    "position": 3
   },
   {
     "id": 77,
     "username": "diep.pth",
     "phone": "0901055858",
     "fullName": "Phan Thị Hồng Điệp",
-    "seatNumber": "C5",
-    "row": "C",
-    "position": 5
+    "seatNumber": "F3",
+    "row": "F",
+    "position": 3
   },
   {
     "id": 78,
     "username": "ducnh",
     "phone": "0903450005",
     "fullName": "Nguyễn Hồng Đức",
-    "seatNumber": "C3",
-    "row": "C",
-    "position": 3
+    "seatNumber": "E2",
+    "row": "E",
+    "position": 2
   },
   {
     "id": 79,
     "username": "maittt",
     "phone": "0915668588",
     "fullName": "Trần Thị Tuyết Mai",
-    "seatNumber": "E2",
-    "row": "E",
+    "seatNumber": "F2",
+    "row": "F",
     "position": 2
   },
   {
@@ -1537,8 +1538,8 @@
     "username": "gianglv",
     "phone": "0915331171",
     "fullName": "Lê Văn Giang",
-    "seatNumber": "F1",
-    "row": "F",
+    "seatNumber": "G1",
+    "row": "G",
     "position": 1
   },
   {
@@ -1546,8 +1547,8 @@
     "username": "quandm",
     "phone": "0912484037",
     "fullName": "Đỗ Mạnh Quân",
-    "seatNumber": "F2",
-    "row": "F",
+    "seatNumber": "G2",
+    "row": "G",
     "position": 2
   },
   {
@@ -1555,8 +1556,8 @@
     "username": "giangdh",
     "phone": "0984898401",
     "fullName": "Đỗ Hồng Giang",
-    "seatNumber": "F3",
-    "row": "F",
+    "seatNumber": "G3",
+    "row": "G",
     "position": 3
   },
   {
@@ -1564,8 +1565,8 @@
     "username": "nguyenquang.tam",
     "phone": "0912235685",
     "fullName": "Nguyễn Quang Tâm",
-    "seatNumber": "G1",
-    "row": "G",
+    "seatNumber": "H1",
+    "row": "H",
     "position": 1
   },
   {
@@ -1573,8 +1574,8 @@
     "username": "phamthi.thuy",
     "phone": "0985814094",
     "fullName": "Phạm Thị Thúy",
-    "seatNumber": "G2",
-    "row": "G",
+    "seatNumber": "H2",
+    "row": "H",
     "position": 2
   },
   {
@@ -1582,8 +1583,8 @@
     "username": "loi.nv",
     "phone": "0961689169",
     "fullName": "Nguyễn Văn Lợi",
-    "seatNumber": "G3",
-    "row": "G",
+    "seatNumber": "H3",
+    "row": "H",
     "position": 3
   },
   {
@@ -1591,17 +1592,17 @@
     "username": "nguyenthikim.thanh",
     "phone": "0912841893",
     "fullName": "Nguyễn Thị Kim Thanh",
-    "seatNumber": "H1",
-    "row": "H",
-    "position": 1
+    "seatNumber": "I2",
+    "row": "I",
+    "position": 2
   },
   {
     "id": 117,
     "username": "tuan.nt",
     "phone": "0973199555",
     "fullName": "Nguyễn Thanh Tuấn",
-    "seatNumber": "J1",
-    "row": "J",
+    "seatNumber": "K1",
+    "row": "K",
     "position": 1
   },
   {
@@ -1609,8 +1610,8 @@
     "username": "leht",
     "phone": "0946728999",
     "fullName": "Hà Thị Lê",
-    "seatNumber": "J2",
-    "row": "J",
+    "seatNumber": "K2",
+    "row": "K",
     "position": 2
   },
   {
@@ -1618,8 +1619,8 @@
     "username": "tuanna180",
     "phone": "0911123999",
     "fullName": "Nguyễn Anh Tuấn",
-    "seatNumber": "J3",
-    "row": "J",
+    "seatNumber": "K3",
+    "row": "K",
     "position": 3
   },
   {
@@ -1627,8 +1628,8 @@
     "username": "dt.nguyen",
     "phone": "0972088999",
     "fullName": "Dương Tuấn Nguyên",
-    "seatNumber": "J4",
-    "row": "J",
+    "seatNumber": "K4",
+    "row": "K",
     "position": 4
   },
   {
@@ -1636,8 +1637,8 @@
     "username": "hung.vv",
     "phone": "0912032279",
     "fullName": "Vũ Văn Hưng",
-    "seatNumber": "J5",
-    "row": "J",
+    "seatNumber": "K5",
+    "row": "K",
     "position": 5
   },
   {
@@ -1645,8 +1646,8 @@
     "username": "vuht",
     "phone": "0948689996",
     "fullName": "Hoàng Tuấn Vũ",
-    "seatNumber": "J6",
-    "row": "J",
+    "seatNumber": "K6",
+    "row": "K",
     "position": 6
   },
   {
@@ -1654,8 +1655,8 @@
     "username": "tuongnb",
     "phone": "0913271338",
     "fullName": "Nguyễn Bình Tường",
-    "seatNumber": "L1",
-    "row": "L",
+    "seatNumber": "M1",
+    "row": "M",
     "position": 1
   },
   {
@@ -1681,8 +1682,8 @@
     "username": "huy.nd",
     "phone": "0988718182",
     "fullName": "Nguyễn Đức Huy",
-    "seatNumber": "K1",
-    "row": "K",
+    "seatNumber": "L1",
+    "row": "L",
     "position": 1
   },
   {
@@ -1690,8 +1691,8 @@
     "username": "haotq",
     "phone": "0901599866",
     "fullName": "Trương Quý Hào",
-    "seatNumber": "K5",
-    "row": "K",
+    "seatNumber": "L5",
+    "row": "L",
     "position": 5
   },
   {
@@ -1699,8 +1700,8 @@
     "username": "ng.thithu",
     "phone": "0984176176",
     "fullName": "Nguyễn Thị Thu",
-    "seatNumber": "K4",
-    "row": "K",
+    "seatNumber": "L4",
+    "row": "L",
     "position": 4
   },
   {
@@ -1708,8 +1709,8 @@
     "username": "nhquan",
     "phone": "0977931999",
     "fullName": "Nguyễn Hồng Quân",
-    "seatNumber": "K2",
-    "row": "K",
+    "seatNumber": "L2",
+    "row": "L",
     "position": 2
   },
   {
@@ -1717,8 +1718,8 @@
     "username": "phuong.pv",
     "phone": "0983280680",
     "fullName": "Phan Việt Phương",
-    "seatNumber": "K6",
-    "row": "K",
+    "seatNumber": "L6",
+    "row": "L",
     "position": 6
   },
   {
@@ -1735,8 +1736,8 @@
     "username": "ntmphuong",
     "phone": "0912710186",
     "fullName": "Nguyễn Thị Minh Phương",
-    "seatNumber": "K3",
-    "row": "K",
+    "seatNumber": "L3",
+    "row": "L",
     "position": 3
   },
   {
@@ -1744,8 +1745,8 @@
     "username": "dovan.phi",
     "phone": "0912054225",
     "fullName": "Đỗ Văn Phi",
-    "seatNumber": "M2",
-    "row": "M",
+    "seatNumber": "N2",
+    "row": "N",
     "position": 2
   },
   {
@@ -1753,8 +1754,8 @@
     "username": "thuanpd",
     "phone": "0914790799",
     "fullName": "Phạm Đức Thuận",
-    "seatNumber": "L3",
-    "row": "L",
+    "seatNumber": "M3",
+    "row": "M",
     "position": 3
   },
   {
@@ -1762,8 +1763,8 @@
     "username": "cannq",
     "phone": "0915315939",
     "fullName": "Nguyễn Quốc Cẩn",
-    "seatNumber": "L4",
-    "row": "L",
+    "seatNumber": "M4",
+    "row": "M",
     "position": 4
   },
   {
@@ -1771,8 +1772,8 @@
     "username": "nv.tan",
     "phone": "0912244584",
     "fullName": "Nguyễn Vĩnh Tân",
-    "seatNumber": "L5",
-    "row": "L",
+    "seatNumber": "M5",
+    "row": "M",
     "position": 5
   },
   {
@@ -1780,8 +1781,8 @@
     "username": "haipn",
     "phone": "0912474456",
     "fullName": "Phan Ngọc Hải",
-    "seatNumber": "L6",
-    "row": "L",
+    "seatNumber": "M6",
+    "row": "M",
     "position": 6
   },
   {
@@ -1807,8 +1808,8 @@
     "username": "duynq",
     "phone": "0917123888",
     "fullName": "Nguyễn Quốc Duy",
-    "seatNumber": "M3",
-    "row": "M",
+    "seatNumber": "N3",
+    "row": "N",
     "position": 3
   },
   {
@@ -1816,8 +1817,8 @@
     "username": "tho.nh",
     "phone": "0919386899",
     "fullName": "Nguyễn Hồng Thọ",
-    "seatNumber": "M4",
-    "row": "M",
+    "seatNumber": "N4",
+    "row": "N",
     "position": 4
   },
   {
@@ -1825,8 +1826,8 @@
     "username": "nk.hieu",
     "phone": "0902220110",
     "fullName": "Nguyễn Khắc Hiếu",
-    "seatNumber": "L2",
-    "row": "L",
+    "seatNumber": "M2",
+    "row": "M",
     "position": 2
   },
   {
@@ -1834,8 +1835,8 @@
     "username": "nguyen.tuyet",
     "phone": "0983042799",
     "fullName": "Nguyễn Thị Tuyết",
-    "seatNumber": "M6",
-    "row": "M",
+    "seatNumber": "N6",
+    "row": "N",
     "position": 6
   },
   {
@@ -1843,8 +1844,8 @@
     "username": "hastt",
     "phone": "0989287964",
     "fullName": "Sái Thị Thu Hà",
-    "seatNumber": "M5",
-    "row": "M",
+    "seatNumber": "N5",
+    "row": "N",
     "position": 5
   },
   {
@@ -1888,53 +1889,53 @@
     "username": "thanvan.hung",
     "phone": "0943923668",
     "fullName": "Thân Văn Hùng",
-    "seatNumber": "N2",
+    "seatNumber": "N1",
     "row": "N",
-    "position": 2
+    "position": 1
   },
   {
     "id": 150,
     "username": "tienpd",
     "phone": "0904317264",
     "fullName": "Phan Diệu Tiên",
-    "seatNumber": "N3",
+    "seatNumber": "N10",
     "row": "N",
-    "position": 3
+    "position": 10
   },
   {
     "id": 151,
     "username": "nthihuong",
     "phone": "0944756888",
     "fullName": "Nguyễn Thị Hường",
-    "seatNumber": "N4",
+    "seatNumber": "N9",
     "row": "N",
-    "position": 4
+    "position": 9
   },
   {
     "id": 152,
     "username": "nguyentuancuong",
     "phone": "0912557599",
     "fullName": "Nguyễn Tuấn Cương",
-    "seatNumber": "N5",
+    "seatNumber": "N8",
     "row": "N",
-    "position": 5
+    "position": 8
   },
   {
     "id": 153,
     "username": "dungpa",
     "phone": "0976988888",
     "fullName": "Phạm Anh Dũng",
-    "seatNumber": "N6",
+    "seatNumber": "N7",
     "row": "N",
-    "position": 6
+    "position": 7
   },
   {
     "id": 154,
     "username": "quangth",
     "phone": "0913089646",
     "fullName": "Trần Hồng Quang",
-    "seatNumber": "F5",
-    "row": "F",
+    "seatNumber": "G5",
+    "row": "G",
     "position": 5
   },
   {
@@ -1942,8 +1943,8 @@
     "username": "huyenlb",
     "phone": "0904910679",
     "fullName": "Lương Bích Huyền",
-    "seatNumber": "F4",
-    "row": "F",
+    "seatNumber": "G4",
+    "row": "G",
     "position": 4
   },
   {
@@ -1951,26 +1952,26 @@
     "username": "n.anhtuan",
     "phone": "0913268987",
     "fullName": "Nguyễn Anh Tuấn",
-    "seatNumber": "H2",
-    "row": "H",
-    "position": 2
+    "seatNumber": "I3",
+    "row": "I",
+    "position": 3
   },
   {
     "id": 157,
     "username": "phuongnt3",
     "phone": "0913336699",
     "fullName": "Nguyễn Thanh Phương",
-    "seatNumber": "H3",
-    "row": "H",
-    "position": 3
+    "seatNumber": "I4",
+    "row": "I",
+    "position": 4
   },
   {
     "id": 158,
     "username": "anh.nnl",
     "phone": "0904402041",
     "fullName": "Nguyễn Ngọc Lan Anh",
-    "seatNumber": "I2",
-    "row": "I",
+    "seatNumber": "J2",
+    "row": "J",
     "position": 2
   },
   {
@@ -1978,8 +1979,8 @@
     "username": "nguyenquanghung",
     "phone": "0913227943",
     "fullName": "Nguyễn Quang Hưng",
-    "seatNumber": "I3",
-    "row": "I",
+    "seatNumber": "J3",
+    "row": "J",
     "position": 3
   },
   {
@@ -2041,8 +2042,8 @@
     "username": "linh.nguyenthimy",
     "phone": "0983626656",
     "fullName": "Nguyễn Thị Mỹ Linh",
-    "seatNumber": "G5",
-    "row": "G",
+    "seatNumber": "H5",
+    "row": "H",
     "position": 5
   },
   {
@@ -2050,8 +2051,8 @@
     "username": "ngactb",
     "phone": "0983023172",
     "fullName": "Chu Thị Bích Nga",
-    "seatNumber": "G4",
-    "row": "G",
+    "seatNumber": "H4",
+    "row": "H",
     "position": 4
   },
   {
@@ -2059,8 +2060,8 @@
     "username": "anh.tn",
     "phone": "0912056589",
     "fullName": "Trần Ngọc Anh",
-    "seatNumber": "I4",
-    "row": "I",
+    "seatNumber": "J4",
+    "row": "J",
     "position": 4
   },
   {
@@ -2068,8 +2069,8 @@
     "username": "anh.td",
     "phone": "0979756888",
     "fullName": "Trần Đức Anh",
-    "seatNumber": "I5",
-    "row": "I",
+    "seatNumber": "J5",
+    "row": "J",
     "position": 5
   },
   {
@@ -2077,8 +2078,8 @@
     "username": "truong.nv2",
     "phone": "0986414788",
     "fullName": "Nguyễn Văn Trưởng",
-    "seatNumber": "I6",
-    "row": "I",
+    "seatNumber": "J6",
+    "row": "J",
     "position": 6
   },
   {
@@ -2086,18 +2087,18 @@
     "username": "khangnv",
     "phone": "0913141105",
     "fullName": "Nguyễn Văn Khang",
-    "seatNumber": "H5",
-    "row": "H",
-    "position": 5
+    "seatNumber": "I6",
+    "row": "I",
+    "position": 6
   },
   {
     "id": 172,
     "username": "tienpv",
     "phone": "0913511102",
     "fullName": "Phạm Văn Tiến",
-    "seatNumber": "H4",
-    "row": "H",
-    "position": 4
+    "seatNumber": "I5",
+    "row": "I",
+    "position": 5
   },
   {
     "id": 173,
@@ -3148,9 +3149,9 @@
     "username": "anhnv19",
     "phone": "0903458089",
     "fullName": "Nguyễn Vân Anh",
-    "seatNumber": "B4",
+    "seatNumber": "B23",
     "row": "B",
-    "position": 4
+    "position": 23
   },
   {
     "id": 290,
@@ -3193,9 +3194,9 @@
     "username": "haimanh",
     "phone": "0913522899",
     "fullName": "Hoàng Mạnh Hải",
-    "seatNumber": "C6",
-    "row": "C",
-    "position": 6
+    "seatNumber": "D4",
+    "row": "D",
+    "position": 4
   }
             ];
              realDelegates.forEach(delegate => {
