--- a/admin.html
+++ b/admin.html
@@ -2361,9 +2361,9 @@ function initializeDelegateData() {
     {
         "id": 175,
         "seatNumber": "F22",
-        "fullName": "Trịnh Thị Bích Ngọc",
-        "position": "Phó Giám đốc Chi nhánh Thái Bình",
-        "phone": "0983146409",
+        "fullName": "Đỗ Thị Bích Thủy",
+        "position": "UV BCH Đảng bộ,\r\nTrưởng PGD Minh Khai - CN Thái Bình",
+        "phone": "0914838058",
         "row": "F",
         "seatPosition": 22
     },
