--- a/tracuu.html
+++ b/tracuu.html
@@ -2119,13 +2119,13 @@
     "position": 21
   },
   {
-    "id": 175,
-    "username": "ttngoc",
-    "phone": "0983146409",
-    "fullName": "Trịnh Thị Bích Ngọc",
-    "seatNumber": "F22",
-    "row": "F",
-    "position": 22
+        "id": 175,
+        "username": "thuy.do",
+        "phone": "0914838058",
+        "fullName": "Đỗ Thị Bích Thủy",
+        "seatNumber": "F22",
+        "row": "F",
+        "seatPosition": 22
   },
   {
     "id": 176,
