--- a/admin.html
+++ b/admin.html
@@ -3243,12 +3243,12 @@ function initializeDelegateData() {
     {
         "id": 273,
         "seatNumber": "J15",
-        "fullName": "Vũ Anh Đức",
-        "position": "Bí thư Chi bộ,\r\nGiám đốc Chi nhánh 5 - TP.HCM",
-        "phone": "0903465223",
+        "fullName": "Huỳnh Khánh Linh",
+        "position": "Chi ủy viên,\r\nPhó Giám đốc Chi nhánh 5 - TP.HCM",
+        "phone": "0905632255",
         "row": "J",
         "seatPosition": 15
-    },
+         },
     {
         "id": 274,
         "seatNumber": "J16",
