--- a/tracuu.html
+++ b/tracuu.html
@@ -1517,9 +1517,9 @@
   },
   {
     "id": 108,
-    "username": "daonta",
-    "phone": "0912904171",
-    "fullName": "Nguyễn Thị Anh Đào",
+    "username": "thuannt",
+    "phone": "0904056369",
+    "fullName": "Nguyễn Thị Thuận",
     "seatNumber": "H7",
     "row": "H",
     "position": 7
