--- a/admin.html
+++ b/admin.html
@@ -1758,8 +1758,8 @@ function initializeDelegateData() {
     {
         "id": 108,
         "seatNumber": "H7",
-        "fullName": "Nguyễn Thị Anh Đào",
-        "position": "Bí thư Đảng ủy,\r\nGiám đốc Chi nhánh Tây Hà Nội",
+        "fullName": "Nguyễn Thị Thuận",
+        "position": "Trưởng phòng Tổng hợp,\r\nChi nhánh Tây Hà Nội",
         "phone": "0912904171",
         "row": "H",
         "seatPosition": 7
