--- a/tracuu.html
+++ b/tracuu.html
@@ -201,7 +201,8 @@
     <div class="container">
         <div class="header">
             <div class="event-title">
-                ĐẠI HỘI ĐẠI BIỂU ĐẢNG BỘ NGÂN HÀNG TMCP CÔNG THƯƠNG VIỆT NAM<br>
+                ĐẠI HỘI ĐẠI BIỂU<br>
+                ĐẢNG BỘ NGÂN HÀNG TMCP CÔNG THƯƠNG VIỆT NAM<br>
                 LẦN THỨ XI, NHIỆM KỲ 2025 - 2030
             </div>
         </div>
