--- a/tracuu.html
+++ b/tracuu.html
@@ -492,10 +492,11 @@
     <div class="container">
         <div class="header">
             <div class="event-title">
-                ĐẠI HỘI ĐẠI BIỂU ĐẢNG BỘ NHCTVN LẦN THỨ XI,<br>
-                NHIỆM KỲ 2025 - 2030
+                HỘI NGHỊ<br>
+                TỔNG KẾT CÔNG TÁC ĐẢNG, HOẠT ĐỘNG KINH DOANH NĂM 2025<br>
+                TRIỂN KHAI NHIỆM VỤ NĂM 2026    
             </div>
-            <h1>Chương trình tra cứu chỗ ngồi đại biểu tham dự Đại hội</h1>
+            <h1>Chương trình tra cứu chỗ ngồi đại biểu tham dự Hội nghị</h1>
         </div>
 
         <div class="search-section">
