--- a/tracuu.html
+++ b/tracuu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tra cứu ghế theo Username</title>
+    <title>Tra cứu vị trí ghế ngồi</title>
     <style>
         * {
             margin: 0;
@@ -3501,3 +3501,4 @@
     </script>
 </body>
 </html>
+
