--- a/tracuu.html
+++ b/tracuu.html
@@ -554,7 +554,7 @@
         
         function initializeDelegateData() {
             const realDelegates = [
-        {
+                       {
                 "id": 1,
                 "username": "binhtm",
                 "phone": "0913588832",
@@ -636,7 +636,7 @@
                 "position": 19
         },
         {
-                "id": 11,
+                "id": 10,
                 "username": "hoaiptt",
                 "phone": "0912323239",
                 "fullName": "Phạm Thị Thanh Hoài",
@@ -645,7 +645,7 @@
                 "position": 20
         },
         {
-                "id": 12,
+                "id": 11,
                 "username": "tan.tv",
                 "phone": "0912171372",
                 "fullName": "Trần Văn Tần",
@@ -654,7 +654,7 @@
                 "position": 7
         },
         {
-                "id": 13,
+                "id": 12,
                 "username": "hoaln",
                 "phone": "0913312827",
                 "fullName": "Lê Như Hoa",
@@ -663,7 +663,7 @@
                 "position": 9
         },
         {
-                "id": 14,
+                "id": 13,
                 "username": "hadtv",
                 "phone": "0913095308",
                 "fullName": "Đặng Thị Việt Hà",
@@ -672,7 +672,7 @@
                 "position": 11
         },
         {
-                "id": 15,
+                "id": 14,
                 "username": "nguyenducthanh",
                 "phone": "0913201274",
                 "fullName": "Nguyễn Đức Thành",
@@ -681,7 +681,7 @@
                 "position": 7
         },
         {
-                "id": 16,
+                "id": 15,
                 "username": "lantcq",
                 "phone": "0982512513",
                 "fullName": "Trần Công Quỳnh Lân",
@@ -690,7 +690,7 @@
                 "position": 12
         },
         {
-                "id": 17,
+                "id": 16,
                 "username": "hung.nh",
                 "phone": "0904252732",
                 "fullName": "Nguyễn Hải Hưng",
@@ -699,7 +699,7 @@
                 "position": 8
         },
         {
-                "id": 18,
+                "id": 17,
                 "username": "hala",
                 "phone": "0904021866",
                 "fullName": "Lê Anh Hà",
@@ -708,7 +708,7 @@
                 "position": 10
         },
         {
-                "id": 19,
+                "id": 18,
                 "username": "ng.a.tuan",
                 "phone": "0903421636",
                 "fullName": "Nguyễn Anh Tuấn",
@@ -717,7 +717,7 @@
                 "position": 16
         },
         {
-                "id": 20,
+                "id": 19,
                 "username": "nttung",
                 "phone": "0989899268",
                 "fullName": "Nguyễn Thanh Tùng",
@@ -726,7 +726,7 @@
                 "position": 17
         },
         {
-                "id": 21,
+                "id": 20,
                 "username": "duclv",
                 "phone": "0967596666",
                 "fullName": "Lê Việt Đức",
@@ -735,7 +735,7 @@
                 "position": 18
         },
         {
-                "id": 22,
+                "id": 21,
                 "username": "thanhxuannguyen",
                 "phone": "0902754799",
                 "fullName": "Nguyễn Thành Xuân",
@@ -744,7 +744,7 @@
                 "position": 14
         },
         {
-                "id": 23,
+                "id": 22,
                 "username": "xuanptt",
                 "phone": "0982779688",
                 "fullName": "Phạm Thị Thanh Xuân",
@@ -753,7 +753,7 @@
                 "position": 19
         },
         {
-                "id": 24,
+                "id": 23,
                 "username": "huongnguyen",
                 "phone": "0913012866",
                 "fullName": "Nguyễn Thị Hương",
@@ -762,7 +762,7 @@
                 "position": 22
         },
         {
-                "id": 25,
+                "id": 24,
                 "username": "lanlp",
                 "phone": "0912661422",
                 "fullName": "Lê Phương Lan",
@@ -771,7 +771,7 @@
                 "position": 21
         },
         {
-                "id": 26,
+                "id": 25,
                 "username": "tuyendx",
                 "phone": "0906112359",
                 "fullName": "Đào Xuân Tuyên",
@@ -780,7 +780,7 @@
                 "position": 23
         },
         {
-                "id": 27,
+                "id": 26,
                 "username": "huongdtk",
                 "phone": "0984339558",
                 "fullName": "Đoàn Thị Kiều Hương",
@@ -789,7 +789,7 @@
                 "position": 22
         },
         {
-                "id": 28,
+                "id": 27,
                 "username": "phuonglt106",
                 "phone": "0988532555",
                 "fullName": "Lê Thị Phượng",
@@ -798,7 +798,7 @@
                 "position": 24
         },
         {
-                "id": 29,
+                "id": 28,
                 "username": "Koji.Iriguchi",
                 "phone": "110474",
                 "fullName": "Koji Iriguchi",
@@ -807,7 +807,7 @@
                 "position": 6
         },
         {
-                "id": 30,
+                "id": 29,
                 "username": "anhnv19",
                 "phone": "0903458089",
                 "fullName": "Nguyễn Vân Anh",
@@ -816,7 +816,7 @@
                 "position": 21
         },
         {
-                "id": 31,
+                "id": 30,
                 "username": "duongcq",
                 "phone": "0988082258",
                 "fullName": "Cát Quang Dương",
@@ -825,7 +825,7 @@
                 "position": 8
         },
         {
-                "id": 32,
+                "id": 31,
                 "username": "bac.nguyenthi",
                 "phone": "0913270712",
                 "fullName": "Nguyễn Thị Bắc",
@@ -834,7 +834,7 @@
                 "position": 9
         },
         {
-                "id": 33,
+                "id": 32,
                 "username": "bui.nhu.y",
                 "phone": "0912012230",
                 "fullName": "Bùi Như Ý",
@@ -843,7 +843,7 @@
                 "position": 10
         },
         {
-                "id": 34,
+                "id": 33,
                 "username": "vu.lh",
                 "phone": "0983797986",
                 "fullName": "Lâm Hoàng Vũ",
@@ -852,7 +852,7 @@
                 "position": 19
         },
         {
-                "id": 35,
+                "id": 34,
                 "username": "huyenvtt2",
                 "phone": "0983022293",
                 "fullName": "Vũ Thị Thanh Huyền",
@@ -861,7 +861,7 @@
                 "position": 20
         },
         {
-                "id": 36,
+                "id": 35,
                 "username": "quyethd",
                 "phone": "0768886688",
                 "fullName": "Hoàng Đức Quyết",
@@ -870,7 +870,7 @@
                 "position": 21
         },
         {
-                "id": 37,
+                "id": 36,
                 "username": "thu.nta",
                 "phone": "0912121052",
                 "fullName": "Nguyễn Thị Anh Thư",
@@ -879,7 +879,7 @@
                 "position": 10
         },
         {
-                "id": 38,
+                "id": 37,
                 "username": "dang.nh",
                 "phone": "0913351272",
                 "fullName": "Nguyễn Hải Đăng",
@@ -888,7 +888,7 @@
                 "position": 7
         },
         {
-                "id": 39,
+                "id": 38,
                 "username": "ptt.huyen",
                 "phone": "0983322105",
                 "fullName": "Phạm Thị Thu Huyền",
@@ -897,7 +897,7 @@
                 "position": 9
         },
         {
-                "id": 40,
+                "id": 39,
                 "username": "thaomh",
                 "phone": "0975168668",
                 "fullName": "Mai Hương Thảo",
@@ -906,7 +906,7 @@
                 "position": 8
         },
         {
-                "id": 41,
+                "id": 40,
                 "username": "ngavtv",
                 "phone": "0989099496",
                 "fullName": "Vũ Thị Việt Nga",
@@ -915,7 +915,7 @@
                 "position": 23
         },
         {
-                "id": 42,
+                "id": 41,
                 "username": "thanhptn",
                 "phone": "0987888009",
                 "fullName": "Phạm Thị Nguyệt Thanh",
@@ -924,7 +924,7 @@
                 "position": 24
         },
         {
-                "id": 43,
+                "id": 42,
                 "username": "thangnh",
                 "phone": "0913320095",
                 "fullName": "Nguyễn Hữu Thắng",
@@ -933,7 +933,7 @@
                 "position": 23
         },
         {
-                "id": 44,
+                "id": 43,
                 "username": "nmtoan",
                 "phone": "0912288272",
                 "fullName": "Nguyễn Mạnh Toàn",
@@ -942,43 +942,43 @@
                 "position": 11
         },
         {
-                "id": 45,
+                "id": 44,
                 "username": "th.nam",
                 "phone": "0936931979",
                 "fullName": "Trần Hoài Nam",
-                "seatNumber": "E4",
-                "row": "E",
-                "position": 4
-        },
-        {
-                "id": 46,
-                "username": "kiennt",
-                "phone": "0904879369",
-                "fullName": "Nguyễn Trần Kiên",
                 "seatNumber": "E3",
                 "row": "E",
                 "position": 3
         },
         {
-                "id": 47,
+                "id": 45,
+                "username": "kiennt",
+                "phone": "0904879369",
+                "fullName": "Nguyễn Trần Kiên",
+                "seatNumber": "E2",
+                "row": "E",
+                "position": 2
+        },
+        {
+                "id": 46,
                 "username": "thinhnt",
                 "phone": "0912150802",
                 "fullName": "Nguyễn Thế Thịnh",
-                "seatNumber": "E6",
-                "row": "E",
-                "position": 6
-        },
-        {
-                "id": 48,
-                "username": "thuong.nc",
-                "phone": "0868999145",
-                "fullName": "Nguyễn Công Thương",
                 "seatNumber": "E5",
                 "row": "E",
                 "position": 5
         },
         {
-                "id": 49,
+                "id": 47,
+                "username": "thuong.nc",
+                "phone": "0868999145",
+                "fullName": "Nguyễn Công Thương",
+                "seatNumber": "E4",
+                "row": "E",
+                "position": 4
+        },
+        {
+                "id": 48,
                 "username": "trangbt",
                 "phone": "0988362843",
                 "fullName": "Bùi Thu Trang",
@@ -987,7 +987,7 @@
                 "position": 20
         },
         {
-                "id": 50,
+                "id": 49,
                 "username": "thunv2",
                 "phone": "0907746688",
                 "fullName": "Nguyễn Văn Thụ",
@@ -996,7 +996,7 @@
                 "position": 13
         },
         {
-                "id": 51,
+                "id": 50,
                 "username": "thuybtt",
                 "phone": "0989308517",
                 "fullName": "Bùi Thị Thanh Thúy",
@@ -1005,7 +1005,7 @@
                 "position": 19
         },
         {
-                "id": 52,
+                "id": 51,
                 "username": "truonghx",
                 "phone": "0915357777",
                 "fullName": "Hà Xuân Trường",
@@ -1014,16 +1014,16 @@
                 "position": 15
         },
         {
-                "id": 53,
+                "id": 52,
                 "username": "vanpth1",
                 "phone": "0916308899",
                 "fullName": "Phan Thị Hồng Vân",
-                "seatNumber": "E2",
+                "seatNumber": "E1",
                 "row": "E",
-                "position": 2
+                "position": 1
         },
         {
-                "id": 54,
+                "id": 53,
                 "username": "longpq",
                 "phone": "0938335588",
                 "fullName": "Phạm Quốc Long",
@@ -1032,7 +1032,7 @@
                 "position": 1
         },
         {
-                "id": 55,
+                "id": 54,
                 "username": "binhtq",
                 "phone": "0912289669",
                 "fullName": "Trần Quốc Bình",
@@ -1041,7 +1041,7 @@
                 "position": 2
         },
         {
-                "id": 56,
+                "id": 55,
                 "username": "duynn",
                 "phone": "0906741981",
                 "fullName": "Nguyễn Ngọc Duy",
@@ -1050,7 +1050,7 @@
                 "position": 3
         },
         {
-                "id": 57,
+                "id": 56,
                 "username": "ho.huu.minh",
                 "phone": "0983636468",
                 "fullName": "Hồ Hữu Minh",
@@ -1059,7 +1059,7 @@
                 "position": 4
         },
         {
-                "id": 58,
+                "id": 57,
                 "username": "tm.hoang",
                 "phone": "0913946611",
                 "fullName": "Trương Minh Hoàng",
@@ -1068,7 +1068,7 @@
                 "position": 12
         },
         {
-                "id": 59,
+                "id": 58,
                 "username": "maidtb",
                 "phone": "0983843668",
                 "fullName": "Đỗ Thị Bích Mai",
@@ -1077,7 +1077,7 @@
                 "position": 20
         },
         {
-                "id": 60,
+                "id": 59,
                 "username": "huonglm",
                 "phone": "0904981468",
                 "fullName": "Lê Minh Hương",
@@ -1086,7 +1086,7 @@
                 "position": 21
         },
         {
-                "id": 61,
+                "id": 60,
                 "username": "minhdtt",
                 "phone": "0913034500",
                 "fullName": "Đặng Thị Tuyết Minh",
@@ -1095,7 +1095,7 @@
                 "position": 22
         },
         {
-                "id": 62,
+                "id": 61,
                 "username": "vyvt",
                 "phone": "0913580004",
                 "fullName": "Vũ Trung Vỹ",
@@ -1104,7 +1104,7 @@
                 "position": 24
         },
         {
-                "id": 63,
+                "id": 62,
                 "username": "ha.phungthu",
                 "phone": "0988683004",
                 "fullName": "Phùng Thu Hà",
@@ -1113,7 +1113,7 @@
                 "position": 18
         },
         {
-                "id": 64,
+                "id": 63,
                 "username": "dtkngan",
                 "phone": "0932253238",
                 "fullName": "Đào Thị Kim Ngân",
@@ -1122,7 +1122,7 @@
                 "position": 17
         },
         {
-                "id": 65,
+                "id": 64,
                 "username": "vunx",
                 "phone": "0913937136",
                 "fullName": "Nguyễn Xuân Vũ",
@@ -1131,13 +1131,22 @@
                 "position": 6
         },
         {
-                "id": 66,
+                "id": 65,
                 "username": "ngandtk",
                 "phone": "0905200299",
                 "fullName": "Đinh Thị Kim Ngân",
                 "seatNumber": "F5",
                 "row": "F",
                 "position": 5
+        },
+        {
+                "id": 66,
+                "username": "luyen.pt",
+                "phone": "0935488581",
+                "fullName": "Phạm Thị Luyến",
+                "seatNumber": "E16",
+                "row": "E",
+                "position": 16
         },
         {
                 "id": 67,
@@ -1747,90 +1756,90 @@
                 "username": "nt.hoa",
                 "phone": "0915525888",
                 "fullName": "Nguyễn Thị Hoa",
-                "seatNumber": "E16",
+                "seatNumber": "E15",
                 "row": "E",
-                "position": 16
+                "position": 15
         },
         {
                 "id": 135,
                 "username": "duong.nn",
                 "phone": "0983888883",
                 "fullName": "Nguyễn Như Dương",
-                "seatNumber": "E15",
+                "seatNumber": "E14",
                 "row": "E",
-                "position": 15
+                "position": 14
         },
         {
                 "id": 136,
                 "username": "giangnq",
                 "phone": "0913297191",
                 "fullName": "Nguyễn Quốc Giang",
-                "seatNumber": "E14",
+                "seatNumber": "E13",
                 "row": "E",
-                "position": 14
+                "position": 13
         },
         {
                 "id": 137,
                 "username": "pt.thang",
                 "phone": "0946977777",
                 "fullName": "Phạm Tuấn Thắng",
-                "seatNumber": "E13",
+                "seatNumber": "E12",
                 "row": "E",
-                "position": 13
+                "position": 12
         },
         {
                 "id": 138,
                 "username": "nguyenthithu.huyen",
                 "phone": "0936536688",
                 "fullName": "Nguyễn Thị Thu Huyền",
-                "seatNumber": "E12",
+                "seatNumber": "E11",
                 "row": "E",
-                "position": 12
+                "position": 11
         },
         {
                 "id": 139,
                 "username": "lien.nth",
                 "phone": "0972655186",
                 "fullName": "Nguyễn Thị Hồng Liên",
-                "seatNumber": "E11",
+                "seatNumber": "E10",
                 "row": "E",
-                "position": 11
+                "position": 10
         },
         {
                 "id": 140,
                 "username": "bac.tv",
                 "phone": "0943939669",
                 "fullName": "Tạ Việt Bắc",
-                "seatNumber": "E10",
+                "seatNumber": "E9",
                 "row": "E",
-                "position": 10
+                "position": 9
         },
         {
                 "id": 141,
                 "username": "ntb.hanh",
                 "phone": "0983800105",
                 "fullName": "Nguyễn Thị Bích Hạnh",
-                "seatNumber": "E9",
+                "seatNumber": "E8",
                 "row": "E",
-                "position": 9
+                "position": 8
         },
         {
                 "id": 142,
                 "username": "tiendh",
                 "phone": "0904309888",
                 "fullName": "Đàm Hồng Tiến",
-                "seatNumber": "E8",
+                "seatNumber": "E7",
                 "row": "E",
-                "position": 8
+                "position": 7
         },
         {
                 "id": 143,
                 "username": "nghia.dt",
                 "phone": "0945336999",
                 "fullName": "Đỗ Trọng Nghĩa",
-                "seatNumber": "E7",
+                "seatNumber": "E6",
                 "row": "E",
-                "position": 7
+                "position": 6
         },
         {
                 "id": 144,
@@ -3564,4 +3573,3 @@
     </script>
 </body>
 </html>
-
