--- a/tracuu.html
+++ b/tracuu.html
@@ -586,9 +586,9 @@
                 "username": "huannt",
                 "phone": "0913538811",
                 "fullName": "Nguyễn Thế Huân",
-                "seatNumber": "B7",
-                "row": "B",
-                "position": 7
+                "seatNumber": "A19",
+                "row": "A",
+                "position": 19
         },
         {
                 "id": 5,
@@ -604,9 +604,9 @@
                 "username": "haild",
                 "phone": "0902190669",
                 "fullName": "Lê Duy Hải",
-                "seatNumber": "B19",
-                "row": "B",
-                "position": 19
+                "seatNumber": "A6",
+                "row": "A",
+                "position": 6
         },
         {
                 "id": 7,
@@ -631,18 +631,18 @@
                 "username": "vannbt",
                 "phone": "0913153027",
                 "fullName": "Nguyễn Bảo Thanh Vân",
-                "seatNumber": "B20",
+                "seatNumber": "B19",
                 "row": "B",
-                "position": 20
+                "position": 19
         },
         {
                 "id": 10,
                 "username": "hoaiptt",
                 "phone": "0912323239",
                 "fullName": "Phạm Thị Thanh Hoài",
-                "seatNumber": "B21",
+                "seatNumber": "B20",
                 "row": "B",
-                "position": 21
+                "position": 20
         },
         {
                 "id": 11,
@@ -811,27 +811,27 @@
                 "username": "duongcq",
                 "phone": "0988082258",
                 "fullName": "Cát Quang Dương",
-                "seatNumber": "B8",
+                "seatNumber": "B7",
                 "row": "B",
-                "position": 8
+                "position": 7
         },
         {
                 "id": 30,
                 "username": "bac.nguyenthi",
                 "phone": "0913270712",
                 "fullName": "Nguyễn Thị Bắc",
-                "seatNumber": "B9",
+                "seatNumber": "B8",
                 "row": "B",
-                "position": 9
+                "position": 8
         },
         {
                 "id": 31,
                 "username": "bui.nhu.y",
                 "phone": "0912012230",
                 "fullName": "Bùi Như Ý",
-                "seatNumber": "B10",
+                "seatNumber": "B9",
                 "row": "B",
-                "position": 10
+                "position": 9
         },
         {
                 "id": 32,
