--- a/tracuu.html
+++ b/tracuu.html
@@ -613,9 +613,9 @@
                 "username": "dtson",
                 "phone": "0908687868",
                 "fullName": "Đỗ Thanh Sơn",
-                "seatNumber": "B5",
-                "row": "B",
-                "position": 5
+                "seatNumber": "A1",
+                "row": "A",
+                "position": 1
         },
         {
                 "id": 8,
@@ -3564,3 +3564,4 @@
     </script>
 </body>
 </html>
+
